--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -177,7 +177,7 @@
           </div>
           <div class="mat-title">Exploit Demonstration</div>
           <p class="mat-body-2">
-            Below we have a video demonstrating how the Cable Haunt vulnerability can be exploited on the Sagemcom F@st 3890 modem. The code executing this exploit can be fount in the <a>POC repository</a>. We chose to make a full exploit for this mode as we have confirmation from Sagemcom that they have a patch ready for this particular modem.
+            Below we have a video demonstrating how the Cable Haunt vulnerability can be exploited on the Sagemcom F@st 3890 modem. The code executing this exploit can be fount in the <a href="https://github.com/Lyrebirds/sagemcom-fast-3890-exploit">POC repository</a>. We chose to make a full exploit for this modem as we have confirmation from Sagemcom that they have a patch ready for this particular modem. We recommend everyone, customers and ISPs, to update to this firmware.
           </p>
           <iframe width="560" height="315" src="https://www.youtube.com/embed/5FM9mS5ck3Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           <div id="questions-and-answers" class="mat-display-2 center">
