--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -55,7 +55,7 @@
           </p>
           <p class="mat-body-2">
             The vulnerable endpoint is exposed to the local network, but can be reached remotely due to improper
-            websocket usage. Through malicious communication with this endpoint, a <a target="_blank"
+            WebSocket usage. Through malicious communication with this endpoint, a <a target="_blank"
               href="https://en.wikipedia.org/wiki/Buffer_overflow">buffer overflow</a> can be exploited to gain control
             of the modem. The technical report can be downloaded below.
           </p>
@@ -142,19 +142,19 @@
           </p>
           <div class="mat-title">Accessing the Endpoint</div>
           <p class="mat-body-2">
-            The endpoint, which serves a tool called spectrum analyzer, uses a websocket for communication with the
+            The endpoint, which serves a tool called spectrum analyzer, uses a WebSocket for communication with the
             graphical frontend displayed in a browser. Whereas <a target="_blank"
               href="https://developer.mozilla.org/en-US/docs/Web/HTTP/CORS" target="_blank">CORS</a> would restrict
-            access to such an endpoint for HTTP requests, websocket is not protected by this protocol. Therefore, it is
+            access to such an endpoint for HTTP requests, WebSocket is not protected by this protocol. Therefore, it is
             up to the server to verify the relevant request parameters added by the browser. Because these parameters
-            are never inspected by the cable modem, the websocket will accept requests made by javascript running in the
+            are never inspected by the cable modem, the WebSocket will accept requests made by javascript running in the
             browser regardless of origin, thereby allowing attackers to reach the endpoint. It should be noted that the
             exploit is not limited to run in a browser. Any place where running code can reach an IP on the local
             network, can be used to exploit Cable Haunt.
           </p>
           <div class="mat-title">Taking Control</div>
           <p class="mat-body-2">
-            Once the websocket has been reached, the buffer overflow vulnerability can be exploited. The websocket
+            Once the WebSocket has been reached, the buffer overflow vulnerability can be exploited. The WebSocket
             requests are given as JSON. The parser which interprets this JSON request, will copy the input parameters to
             a buffer, regardless of length, allowing values on the stack to be overwritten. Among these values are
             saved registers, such as the program counter and return address. With a carefully crafted message the modem
@@ -306,7 +306,7 @@
               be found <a target="_blank" (click)="scrollToCenter('test-script-repo-button')">above</a>. <b>ONLY RUN
                 THIS TEST ON EQUIPMENT YOU OWN</b>.
               The script automatically scans your network to find the spectrum analyser and tries to establish
-              connection to the websocket. The script will test if the modem rejects requests from an external origin,
+              connection to the WebSocket. The script will test if the modem rejects requests from an external origin,
               by setting the header parameters similar to how a browser or other modern client would. If the
               connection is established the spectrum analyser can be reached indirectly from outside the local network
               and is, at least partly, vulnerable. The script will afterwards, with your permission, send a specially
@@ -458,6 +458,19 @@
               </mat-expansion-panel>
             </p>
           </mat-expansion-panel>
+          <mat-expansion-panel [(expanded)]="expanded[13]">
+            <mat-expansion-panel-header>
+              <mat-panel-title>
+                Can Cable Haunt Be Exploited Externally?
+              </mat-panel-title>
+            </mat-expansion-panel-header>
+            <p class="mat-body-2">
+              Yes. The vulnerable endpoint is only accessible on the local network, however due to compatibility concerns, WebSocket is not blocked by CORS and SOP in modern browsers. Since the Spectrum Analyzer webserver does not check the Host and Origin parameters set by the browser any javascript running in the users browser are able to send an exploit package to the modem. This could be exploited by an attacker if you to visit a malicious website or if they embed the code, for instance in an advert, on a trusted website. It is important to point out that this is not the only attack vector that can be employed, vulnerable mail-clients, exploited IoT devices, public networks etc. are also viable attack vectors. 
+            </p>
+            <p class="mat-body-2">
+              Many sources report the need for DNS rebind. While DNS rebind can be used in the exploit as explained in <a (click)="scrollToCenter('technical-report-download-button')">the report</a>, it is significantly easier for an attacker to exploit the modem via a direct javascript request.
+            </p>
+          </mat-expansion-panel>
           <mat-expansion-panel [(expanded)]="expanded[12]">
             <mat-expansion-panel-header>
               <mat-panel-title>
@@ -508,7 +521,7 @@
               </mat-panel-title>
             </mat-expansion-panel-header>
             <p class="mat-body-2">
-              Not in general. The spectrum analyzer's websocket server is not compatible with the websocket version
+              Not in general. The spectrum analyzer's WebSocket server is not compatible with the WebSocket version
               used in Firefox. In the report other techniques to exploit specific modems is described which works in
               Firefox.
             </p>
@@ -552,7 +565,7 @@
             <p class="mat-body-2">
               Perhaps not. This is not heartbleed, EternalBlue, Meltdown or Row Hammer, and we have no illusions about
               this. And yes, Samuel Gross' recent publication of a vulnerability in iMessage much more technically
-              interesting than a buffer overflow in cable modems. While exploitation, websockets aversion to CORS and
+              interesting than a buffer overflow in cable modems. While exploitation, WebSockets aversion to CORS and
               SOP and creating ROP-chains in MIPS architecture, is interesting it is clear that it is the scale, and its
               spread across different manufacturers, that gives this vulnerability public significance.
             </p>
